--- a/index.html
+++ b/index.html
@@ -15,21 +15,27 @@
     </header>
     <main>
         <div class="container-fluid">
+            <div id="errors" style="display: none"></div>
             <div class="row row-cols-lg-auto g-3 align-items-center">
                 <div class="col-12">
-                    <input type="text" id="description" class="form-control" placeholder="Description">
+                    <input type="text" id="description" class="form-control" placeholder="Description" required>
                 </div>
                 <div class="col-12">
-                    <input type="text" id="amount" class="form-control" placeholder="Amount">
+                    <input type="number" id="amount" class="form-control" placeholder="Amount" required>
                 </div>
                 <div class="col-12">
                     <div class="input-group">
                         <div class="input-group-text">R$</div>
-                        <input type="text" id="value" class="form-control" placeholder="Value">
+                        <input type="number" step="0.01" id="value" class="form-control" placeholder="Value" required>
                     </div>
                 </div>
-                <div class="col-12">
+                <div class="col-12" id="btnAdd">
                     <button onclick="addData()" class="btn btn-dark">Add</button>
+                </div>
+                <div class="col-12" id="btnUpdate" style="display: none">
+                    <input type="hidden" id="inputIdUpdate">
+                    <button onclick="updateData()" class="btn btn-success">Save</button>
+                    <button onclick="resetForm()" class="btn btn-danger">Cancel</button>
                 </div>
             </div>
             <table id="listTable" class="table table-hover">
