--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar navbar-light bg-light fixed-top">
             <div class="container-fluid">
                 <a href="index.html" id="navTitle" class="navbar-brand"></a>
             </div>
         </nav>
     </header>
-    <main>
-        <div class="container-fluid">
+    <main style="margin-top: 80px; margin-bottom: 80px">
+        <div class="container-fluid" >
             <div id="errors" style="display: none"></div>
             <div class="row row-cols-lg-auto g-3 align-items-center">
                 <div class="col-12">
@@ -43,6 +43,13 @@
             </table>
         </div>
     </main>
+    <footer>
+        <nav class="navbar navbar-light bg-light fixed-bottom">
+            <div class="container-fluid">
+                <h4 class="text-center text-success">Total: <span id="totalValue">R$ 0,00</span></h4>
+            </div>
+        </nav>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="./js/config.js"></script>
